Stop returning pointers from functions on transactions resource
